[package]
name = "openxr-device-simulator-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
openxr-sys = "0.11.0"
directories.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
ash.workspace = true

[lib]
crate-type = ["cdylib"]
