[package]
name = "vulkan-experiments"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
vulkano.workspace = true
log.workspace = true
env_logger.workspace = true
winit = "0.30.12"
vulkano-shaders = "0.35.0"

