[package]
name = "vulkan-experiments"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
log.workspace = true
env_logger.workspace = true
winit.workspace = true
vulkano.workspace = true
vulkano-shaders.workspace = true

